@@ -1,1 +1,3 @@
 /vendor
+composer.lock
+/nbproject/private/
