@@ -1,0 +1,7 @@
+include.path=${php.global.include.path}
+php.version=PHP_70
+source.encoding=UTF-8
+src.dir=src
+tags.asp=false
+tags.short=false
+web.root=.
